<resources>
    <string name="app_name">PROFIT OR LOSS</string>
    <string name="title_activity_main">PROFIT OR LOSS</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <string name="CDATE">Date</string>
    <string name="TRANSACTION_AMOUNT">Transaction Amount</string>
    <string name="TRANSACTION_CURRENCY">Transaction Currency</string>
    <string name="EXCHANGE_AMOUNT">Exchange Amount</string>
    <string name="EXCHANGE_CURRENCY">Exchange Currency</string>


    <string name="deletePerson">Are you sure to delete the transaction ?</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="title_activity_activity_edit">TRANSACTION</string>
    <string name="title_activity_list">TRANSACTION LIST</string>


    <string name="CaptionTotal">Total Amount</string>
    <string name="TRY">TRY</string>
    <string name="USD">USD</string>
    <string name="EUR">EUR</string>
    <string name="GLD">GLD</string>

    <string name="CaptionProfitOrLoss">Profit Or Loss</string>
    <string name="TotalTL">Total TL</string>
    <string name="CurrentUSD_TLRation">USD/TL</string>
    <string name="CurrentEUR_TLRation">EUR/TL</string>
    <string name="CurrentGLD_TLRation">GLD/TL</string>

    <string name="buttonList">LIST</string>
    <string name="buttonSave">SAVE</string>


    <string-array name="currency">
        <item>TRY</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GLD</item>
    </string-array>


</resources>
